sock-shop/templates/front-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    name: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8079
    nodePort: 30002
  selector:
    name: frontend
