sock-shop/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-with-basic-authentication
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: secret/basic-auth-secret
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Sock Sales App'
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
